test_src/compiler_errors/types/binary/XorFloatError4.b
class XorFloatError4 {
    void test() {
        var value = 14.0;
        println(value ^= 42);
    }
}
